--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@
 title: hbtlabs
 email: "hassenbentanfous@gmail.com"
 description: ""
-baseurl: "http://hbtlabs.github.io/projects-log"
-url: "http://hbtlabs.github.io/projects-log"
+baseurl: "http://hbt.github.io/projects-log"
+url: "http://hbt.github.io/projects-log"
 future: true
 
 # Build settings
