--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: hbtlabs
+title: "projects log"
 email: "hassenbentanfous@gmail.com"
-description: ""
+description: "projects log"
 baseurl: "http://hbt.github.io/projects-log"
 url: "http://hbt.github.io/projects-log"
 future: true
